<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_border"
    android:padding="@dimen/_2sdp">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_border"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="@dimen/_116sdp"
            android:layout_height="@dimen/_116sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_7sdp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/permissions" />

        <TextView
            android:id="@+id/title"
            style="@style/textNormalBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/warning"
            android:textColor="@color/color_text"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/message"
            style="@style/textNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginRight="@dimen/_11sdp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="3"
            android:text="@string/not_have_permission"
            android:textColor="@color/color_sub"
            android:textSize="@dimen/_11sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_11sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnClose"
                style="@style/BtnTransparent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:layout_weight="1"
                android:text="@string/close"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_11sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnAccept"
                style="@style/BtnPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accept"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>